--- a/course code/task 4/index.html
+++ b/course code/task 4/index.html
@@ -84,17 +84,17 @@
             <h2 class="text-3xl font-bold p-5">Event Highlights</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto mt-8">
                 <div class="bg-gray-500 text-white rounded-lg shadow-lg p-6 sm:p-8 flex flex-col items-center">
-                    <img src="../../img/msg.png" alt="" class="mb-4 h-10 invert">
+                    <img src="Screenshot (84).png" alt="" class="mb-4 h-10 invert">
                     <h3 class="text-xl font-bold mb-2 p-5">Keynote Talks</h3>
                     <p class="text-sm sm:text-base">Hear from industry leaders shaping tomorrow's world.</p>
                 </div>
                 <div class="bg-gray-500 text-white rounded-lg shadow-lg p-6 sm:p-8 flex flex-col items-center">
-                    <img src="../../img/msg.png" alt="" class="mb-4 h-10 invert">
+                    <img src="Screenshot (85).png" alt="" class="mb-4 h-10 invert">
                     <h3 class="text-xl font-bold mb-2 p-5">Hands-on Workshops</h3>
                     <p class="text-sm sm:text-base">Gain practical skills with expert-led sessions.</p>
                 </div>
                 <div class="bg-gray-500 text-white rounded-lg shadow-lg p-6 sm:p-8 flex flex-col items-center">
-                    <img src="../../img/msg.png" alt="" class="mb-4 h-10 invert">
+                    <img src="Screenshot (86).png" alt="" class="mb-4 h-10 invert">
                     <h3 class="text-xl font-bold mb-2 p-5">Networking</h3>
                     <p class="text-sm sm:text-base">Connect with peers and potential collaborators.</p>
                 </div>
